[package]
name = "msg_bus"
version = "0.1.2"
authors = ["Matt Bradbury <matt@bexars.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.16", features = ["rt-core", "macros", "sync","time"] }
log = "0.4.8"
futures = "0.3.4"


[dev-dependencies]
# futures = "0.3.4"
futures-test = "0.3.4"
env_logger = "0.7.1"