[package]
name = "msgbus"
version = "0.2.0"
authors = ["Matt Bradbury <matt@bexars.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# [[example]]
# name="marco_polo"

[dependencies]
tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros", "sync","time"] }
log = "0.4.8"
futures = "0.3.4" 


[dev-dependencies]
# futures = "0.3.4"
futures-test = "0.3.4"
env_logger = "0.8.2"
criterion = "0.3"
tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros", "sync","time","io-std","io-util","net"] }


# [example]
# name="marco_polo"

[[bench]]
name = "msgbus_benchmark"
harness = false


